--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="row mb-5 align-items-center">
           <div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
             <img
-              src="images/image_1.jpg"
+              src="images/profile.JPG"
               alt="Image placeholder"
               class="img-fluid"
             />
